--- a/font-end/src/app/ask/ask.component.html
+++ b/font-end/src/app/ask/ask.component.html
@@ -1,1 +1,27 @@
-<p>ask works!</p>
+<div class="wrapper">
+
+<header>
+	<a routerLink="/"><h3>Money Changer Login</h3></a>
+	<div class="top-controls">
+		<button mat-raised-button class='register' routerLink="/register">Register</button>
+	</div>
+</header>
+
+<div class="main">
+
+	<form [formGroup]="askForm" (ngSubmit)="ask()">
+
+          <mat-form-field appearance="outline">
+            <mat-label>Ammount</mat-label>
+            <input matInput formControlName="ammount">
+            <mat-error>Field required</mat-error>
+          </mat-form-field>
+
+          <button style="width: 100%; height: 48px" color="primary" mat-flat-button>
+            LOGIN
+          </button>
+    </form>
+	
+</div>
+
+</div>
